Fix parsing coordinate strings that don't follow kml specs exactly.

Coordinates like '1, 2, 3 4 ,5, 6' are not valid coordinate strings
(should be '1,2,3 4,5,6') but can still be parsed.

Patch by Valery Kharitonov, thanks!
REVIEW: 103525
BUG: 266366
FIXED-IN: 1.5.0/KDE-4.10.0